<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_alarmlist">AlarmList</string>
    <string name="title_connection">Connection</string>
    <string name="title_configuration">Configuration</string>


    <string name="kakao_app_key">c2ca5e18100afa0762eca9521e7ecb04</string>

    <!-- 메인 화면 -->
    <string name="txt_main">안녕하세요! <br/> 저는 매일이입니다.</string>
    <string name="txt2_main">올바른 투약습관을 지킬 수 있게 <br/>
        제가 도와드릴게요!</string>
    <string name="register_btn">회원가입</string>
    <string name="login_btn">로그인하기</string>

    <!-- 로그인 화면 -->
    <string name="btn_login">로그인</string>
    <string name="btn_kakao_login">카카오 로그인</string>
    <string name="txt_email">이메일</string>
    <string name="txt_pwd_hint">비밀번호 8자 이상</string>
    <string name="btn_pwd_find">비밀번호를 잊어버리셨나요?</string>
    <string name="txt_or">or</string>

    <!-- 로그인 팝업창 오류 -->
    <string name="alert_login_error_title">로그인 오류</string>
    <string name="alert_login_error">이메일 혹은 비밀번호가 일치하지 않습니다.<br/>
        다시 시도해주십시오.</string>
    <string name="alert_pwd_reset_title">비밀번호 재설정</string>
    <string name="alert_pwd_reset">가입되어 있는 이메일 주소를<br/>
        입력해 주세요.<br/>
        전송된 메일로 인증을 완료하시면<br/>
        임시 비밀번호가 발급됩니다.</string>

    <!-- 회원가입 -->
    <string name="register_nickname">닉네임</string>
    <string name="register_check_pwd">비밀번호 확인</string>
    <string name="register_policy">By creating an account, you are agreeing to our
Terms of Service and Privacy Policy</string>

    <!-- 로그인 팝업창 오류 -->
    <string name="alert_register_error_title">회원가입 오류</string>
    <string name="alert_register_error_pwd">비밀번호가 일치하지 않습니다. <br/>
        다시 시도해주세요.</string>
    <string name="alert_register_error_email">유효하지 않은 이메일 주소입니다. <br/>
        다시 시도해주세요.</string>

    <!-- 홈 기기연결 팝업창-->
    <string name="alert_home_start_title">
        반가워요! <br/>
        편안한 투약 알림을 위해서 <br/>
        기기와 연결하시겠어요?</string>
    <string name="alert_home_start">기기에서 약을 제 때 가져갔는지 <br/>
        당신의 투약습관을 확인할 수 있어요.</string>
    <string name="alert_home_ok_btn">네, 연동할래요!</string>


    <!-- 온보딩 화면 -->
    <string name="next">NEXT</string>
    <string name="onboarding1_1">기기와 연동하시겠어요?</string>
    <string name="onboarding1_2">투약 기계와 어플리케이션을 연동시킵니다.</string>

    <string name="connecting_step">1. 기기 하단에 전원어뎁터를 연결하세요. <br/>
        2. 내부의 통을 꺼내세요. <br/>
        3. 리셋 버튼을 \'삐\' 소리가 날 때까지 눌러주세요.</string>

    <string name="onboarding_check">전면의 원형 디스플레이가 안 깜빡이나요?</string>
    <string name="onboarding3_2">기기 뒷면 라벨에 적힌 WIFI를 연결한 뒤 <br/>
        앱으로 돌아와주세요.</string>

    <string name="step_preparing">준비단계</string>
    <string name="connect_machine">기기 연결</string>
    <string name="connect_phone_and_machine">폰-기기 연결</string>
    <string name="success_connection">폰-기기 WIFI 연결</string>
    <string name="success">성공!</string>

    <string name="connect_wifi">기기-공유기 연결</string>
    <string name="warn_not_5g">5G Wi-Fi 지원하지 않음</string>
    <string name="connect">연결</string>
    <string name="wifi_password">WIFI 비밀번호 입력</string>

    <!--홈 화면 -->
    <string name="home_fab_tooltip">먹고 있는 약을 추가해보세요!</string>

    <!--홈 - 싱글캘린더 화면 -->
    <string name="home_nick_name">Okki</string>
    <string name="home_nick_name2">님,</string>
    <string name="home_greeting">안녕하세요!</string>
    <string name="home_help">건강한 투약을 도와드릴게요!</string>
    <string name="home_calendar_title">투약 일지</string>

    <!--알람 추가 화면 -->
    <string name="alarm_name">약 이름</string>
    <string name="set_alarm_name">약 이름을 <br/> 설정해주세요!</string>
    <string name="set_alarm_name_desc">기기에 투입한 약의 이름을 입력해주세요. <br/>
    ex. 아침약, 점심약, 당뇨약 등등</string>
    <string name="alarm_period">언제부터 언제까지<br/> 배급하시겠어요?</string>
    <string name="alarm_time">몇 시에 <br/> 배급하시겠어요?</string>

    <!-- 홈_설정화면 -->
    <string name="conf_alarm">알림</string>
    <string name="conf_push">푸시 알림</string>
    <string name="conf_eval">앱 평가하기</string>
    <string name="conf_do_you_like_it">마음에 드시나요?</string>
    <string name="conf_help">도움말</string>
    <string name="conf_q_a">Q&amp;A?</string>
    <string name="conf_service_center">고객센터</string>
    <string name="conf_ariari_number">02-255-255</string>
    <string name="conf_edit">편집</string>

    <!-- 홈_기기 관리화면 -->
    <string name="machine_manage">기기 관리</string>
    <string name="machine_users">Okki님의 매일이</string>
    <string name="machine_remained">남은 잔량</string>
    <string name="machine_no_more_pill">기기 내부에 약이 없습니다.  </string>
    <string name="machine_last_time">마지막 약 배급받은 날</string>
    <string name="machine_replace_time">다음으로 약 교체할 날</string>


</resources>