<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_alarmlist"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_alarmlist" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_connection"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_connection" />


    <item
        android:id="@+id/navigation_configuration"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_configuration" />

</menu>