<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hongik.enactus.myapplication.fragment.home.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_alarmlist"
        android:name="hongik.enactus.myapplication.fragment.home.AlarmFragment"
        android:label="@string/title_alarmlist"
        tools:layout="@layout/fragment_alarmlist" />

    <fragment
        android:id="@+id/navigation_connection"
        android:name="hongik.enactus.myapplication.fragment.home.ConnectionFragment"
        android:label="@string/title_connection"
        tools:layout="@layout/fragment_connection" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="hongik.enactus.myapplication.fragment.home.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />

</navigation>