<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".fragment.home.CalendarFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_gradient_purple"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_nick_name"
                android:textColor="@color/green_textColor"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_main_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_nick_name2"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_main_title"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_greeting"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_main_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/home_help"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_description" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_calendar_title"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_main_btn"  />

            <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
                android:id="@+id/calendarView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>