<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_purple"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment.home.ConnectionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:text="@string/machine_manage" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/machine"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="157dp" />


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="345dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="385dp"
        android:elevation="5dp"
        android:background="@color/grey_background_transparent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/machine_users"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="maeil_123456ff"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="345dp"
            android:orientation="vertical"
            android:elevation="5dp"
            android:background="@color/grey_background_transparent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/machine_remained"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/machine_no_more_pill"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/machine_last_time"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/text_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/machine_replace_time"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>