<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_screen_slide_page.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_main_title"
        android:textStyle="bold"
        android:textColor="@color/purple_textColor"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/step_preparing" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_description"
        android:textColor="@color/black"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/connecting_step" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="196dp"
        android:background="@color/black" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/k"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_circle"
            android:text="\?" />
        <TextView
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_check"
            android:textSize="@dimen/font_size_description"
            android:textColor="@color/grey_textColor" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:background="@drawable/btn_purple_radius"
        android:text="next"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_main_btn"/>

</LinearLayout>