<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="70dp"
        android:textSize="@dimen/font_size_main_title"
        android:textColor="@color/purple_textColor"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/connect_wifi"/>

    <Button
        android:id="@+id/btn_wifi_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="WIFI SCAN"
        android:onClick="clickWifiScan"/>

    <Spinner
        android:id="@+id/spinner_wifi_list"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:paddingLeft="25dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/edittext_onboarding_background"
        android:textSize="@dimen/font_size_main_btn" />

    <EditText
        android:id="@+id/editTxt_wifi_pwd"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:paddingLeft="25dp"
        android:background="@drawable/edittext_onboarding_background"
        android:textColorHint="@color/grey_textColor"
        android:textSize="@dimen/font_size_main_btn"
        android:hint="@string/wifi_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/k"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_circle"
            android:text="\!" />

        <TextView
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn_not_5g"
            android:textSize="@dimen/font_size_description"
            android:textColor="@color/red" />

    </LinearLayout>

</LinearLayout>